fix: Rename userNameFilter to userFilter for consistency in user input handling refactor: Update pageSizeOptions computation for improved logic and clarity fix: Removed wrong alignment styles in table.scss

--- a/privacyidea/static_new/src/styles/table.scss
+++ b/privacyidea/static_new/src/styles/table.scss
@@ -323,8 +323,6 @@ th:nth-child(even) {
     overflow-wrap: anywhere;
     padding-right: 1rem;
     align-items: center;
-    justify-content: flex-end;
-    text-align: right;
     white-space: normal;
     height: 96px;
   }
